<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BusãoJP</string>
    <string name="action_settings">Configurações</string>

    <!-- ActivityMain -->
    <string name="descricao_imagem">Icone da Aplicação</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="favoritos">Favoritos</string>
    <string name="paradas_proximas">Paradas Próximas</string>
    <string name="terminal_integracao">Terminal de Integração</string>

    <!-- PesquisarActivity -->
    <string name="title_activity_pesquisar">Pesquisar</string>
    <string name="linha">Linha</string>
    <string name="logradouro">Logradouro</string>

    <!-- FavoritosActivity -->
    <string name="title_activity_favoritos">Favoritos</string>

    <!-- ParadasActivity -->
    <string name="title_activity_paradas">Paradas Próximas</string>
        <string name="ida">Ida</string>
    <string name="volta">Volta</string>  
    <string name="adicionar_parada">Adicionar Parada</string>

    <!-- IntegracaoActivity -->
    <string name="title_activity_integracao">Terminal de Integração</string>
    <string name="title_activity_itinerario">Itinerário</string>
    <string name="hello_world">Hello world!</string>

    <!-- HorarioActivity -->
    <string name="title_activity_horario">Horário</string>

    <!-- RotasActivity -->
    <string name="Marcar_parada">Marcar Parada</string>
    <string name="title_activity_rotas">Rotas</string>
    <string name="share">Compartilhe sua pesquisa!</string>
    
    
    <!-- LoginActivity -->
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="cadastro">Cadastrar</string>
    <string name="enviar">Enviar</string>
   
    <!-- Preferencias -->
    <string name="title_activity_preferencias">Preferências</string>
    <string name="equipe">Equipe</string>
    <string name="conf">Configurações</string>
    <string name="about">Sobre o Projeto</string>
    <string name="descricao">Este é um projeto desenvolvido para conclusão da disciplina Linguagens de Programação 3 (Android) na UFPB\n\n Equipe: Ana Beatrice Severo\n Carlos André Correia\n Rubens Correia"</string>
    <string name="idioma">Idioma</string>
    <string name="summary_idioma">Selecione o idioma desejado para a aplicação</string>
    <string name="portugues">Português</string>
    <string name="ingles">Inglês</string>
    <string name="dialogTitle">Selecione o Idioma</string>
    <string name="dialogFonte">Selecione o Tamanho da Fonte</string>
    <string name="fonte">Tamanho da fonte</string>
    <string name="summary_fonte">Selecione o tamanho da fonte para o Menu Principal</string>
    <string name="musica">Música</string>
    <string name="summary_musica">Marque se desejar que a música seja ativada</string>
    <string name="bg">Plano de Fundo</string>
    <string name="summary_bg">Marque se desejar a outra opção de plano de fundo</string>
    <string name="corFonte">Cor da fonte</string>
    <string name="summary_corFonte">Selecione a cor da fonte para o Menu Principal</string>
    <string name="dialogCFonte">Selecione a Cor da Fonte</string>
    <string name="PfMenuPrincipal">Preferências do Menu Principal</string>
    <string name="PfGeral">Preferências Gerais</string>

</resources>
