<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fundo"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView 
            android:contentDescription="@string/descricao_imagem"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/onibus"/>
		
        <ImageView 
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/descricao_imagem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/logo"/>       

	</LinearLayout>
	
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/button_pesquisar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pesquisar"
            android:onClick="trataMenu"/>
        
        <Button
            android:id="@+id/button_favoritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favoritos"
            android:onClick="trataMenu" />
        
        <Button
            android:id="@+id/button_paradas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paradas_proximas"
            android:onClick="trataMenu" />
        
        <Button
            android:id="@+id/button_terminal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terminal_integracao"
            android:onClick="trataMenu" />
        
    </LinearLayout>

</LinearLayout>
