<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/LinearLayoutLogin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fundo"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView 
            android:contentDescription="@string/descricao_imagem"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/onibus"/>
		
        <ImageView 
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/descricao_imagem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/logo"/>       

	</LinearLayout>
	
    <RadioGroup
        android:id="@+id/radiobutton_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
                
	    <RadioButton
	        android:id="@+id/login_radioButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login" 
	        android:checked="true" />
	
	    <RadioButton
	        android:id="@+id/cadastrar_radioButton"
	        android:layout_marginLeft="20dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cadastro" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/login"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:onClick="enviar" />
    
</LinearLayout>
